# fastapi-admin-templete

./: README.md
backend/: alembic.ini  alembic.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3e9f115faa3a_.py
backend/app/: app.py  main.py
backend/app/admin/routers/: __init__.py  common.py  decorate.py  monitor.py  setting.py  system.py  user.py
backend/app/admin/schemas/: commom.py  setting.py  system.py  user.py
backend/app/admin/service/common/: album.py  index.py  upload.py
backend/app/admin/service/decorate/: data_article.py  (+2 more)
backend/app/api/: menu.py  role.py  system.py  user.py
backend/app/common/: send_captcha.py
backend/app/consts/: http.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/db/: session.py
backend/app/exceptions/: base.py  configuration.py
backend/app/generator/: config.py  tpl_util.py
backend/app/generator/routers/: gen.py
backend/app/generator/schemas/: generate.py
backend/app/generator/service/: generate.py
backend/app/generator/utils/: gen.py
backend/app/globals/: cache.py  database.py  http.py  log.py  verify.py
backend/app/middlewares/: __init__.py  timeout.py
backend/app/models/: __init__.py  base.py  decorate.py  enums.py  system.py  user.py
backend/app/schemas/: base.py  menu.py  role.py  system.py
backend/app/schemas/validators/: user.py
backend/app/service/system/: menu.py  role.py  user.py
backend/app/utils/: common_util.py  config_util.py  encrypt_util.py  ip_util.py  redis_util.py  service_info.py  url_util.py
backend/test/: test.py
(+21 files in other folders)
