[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["zhangzhipeng <zhangzhipeng@babybus.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
fastapi-pagination = "^0.12.9"
uvicorn = "^0.23.2"
alembic = "^1.12.0"
python-multipart = "^0.0.6"
python-dateutil = "^2.8.2"
pydantic = "^2.3.0"
cryptography = "^41.0.3"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
pytz = "^2023.3.post1"
aiomysql = "^0.2.0"
databases = "^0.8.0"
sqlalchemy = "^1.4.49"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

